# trellis

./: .gitignore  README.md  justfile  pyproject.toml
examples/: __main__.py  fixed_prior.py  learnable_prior.py  list_spec.py  log_prior.py  metaprior.py  nested_spec.py  no_prior.py  pytree.py  sampling.py  transforms.py
src/trellis/: __init__.py  _config.py  _types.py
src/trellis/prior/: _halfnormal.py  _lognormal.py  _noprior.py  _normal.py  _prior.py  _types.py
src/trellis/spec/: __init__.py  _model.py  _parameter.py  _params_structure.py  _requires.py  _spec.py  _state.py  _types.py
src/trellis/transform/: _log.py  _transform.py
src/trellis/typing/: _typecheck.py
tests/prior/: analytical.py  shared.py  test_prior.py
tests/spec/: test_requires.py
