[project]
name = "trellis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "JWSchaefer", email = "joe.w.schaefer@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["beartype>=0.22.9", "jax>=0.9.0.1", "jaxtyping>=0.3.7"]

[project.scripts]
trellis = "trellis:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"


[tool.ruff.lint]
ignore = ["F722", "F821"]

[tool.trellis]
runtime_typechecking = true


[tool.ruff]
[tool.pyright]
reportInvalidTypeForm = false       # Forward refs to metaclass-generated types
reportGeneralTypeIssues = "warning" # Downgrade to warning instead of error

[dependency-groups]
dev = ["pytest>=9.0.2"]
